# coursework_hh_parser

./: README.md  main.py  pyproject.toml
data/: vacancies.json
src/: base_hh_api.py  base_json_saver.py  hh.py  json_saver.py  utils.py  vacancy.py
tests/: conftest.py  test_hh.py  test_json_saver.py  test_vacancy.py
